# hypermodern-python

./: .coverage  .flake8  README.md  mypy.ini  noxfile.py  pyproject.toml
docs/: conf.py  index.rst
docs/_build/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  license.doctree  reference.doctree
docs/_build/_sources/: index.rst.txt  reference.rst.txt
src/hypermodern_python/: __init__.py  console.py
tests/: .coverage  __init__.py  test_console.py
