[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
description = "The hypermodern Python project"
license = "MIT"
authors = ["groza_nadezhda <groza.n@phystech.edu>"]
readme = "README.md"
homepage = "https://github.com/unrip512/hypermodern-python"
repository = "https://github.com/unrip512/hypermodern-python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.0"
requests = "^2.31.0"
numpy = "^1.26.4"
imageio = "^2.34.1"
opencv-python = "^4.9.0.80"
pillow = "^10.3.0"
argparse = "^1.4.0"

[tool.poetry.scripts]
hough_circle_transform = "hypermodern_python.console:main"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = {extras = ["toml"], version = "^7.4.4"}
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
mypy = "^1.10.0"
pytype = {version = "^2024.4.11", python = "3.8"}
typeguard = "^4.2.1"
flake8-annotations = "^3.0.1"
flake8-docstrings = "^1.7.0"
darglint = "^1.8.1"
sphinx = "^7.3.7"
sphinx-autodoc-typehints = "^2.1.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypermodern_python"]

[tool.coverage.report]
show_missing = true
fail_under = 50

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
